MonetDB/src/mal/Tests/tst050.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## Variables names may be tagged with a type upfront.
## They may be initialized with a lexical constant using
## either their stored type syntax or with a string literal
#
#s:str := "hello";
#i:sht := 1:sht;
#b:bit   := true;
#z:bat[int,int]:= new(int,int);
#
## type resolver should complain on the rest
#j:sht := 1:lng;
#k:lng := 1:sht;
#y:bat[str,int]:= new(int,int);
#f:flt := "wrong";
#
!ERROR: MALresolve:Admin.main[5]:type mismatch sht := lng
!ERROR: MALresolve:Admin.main[6]:type mismatch lng := sht
!ERROR: type conflict in statement .new[7]
!ERROR: 'new' undefined in Admin.main[7]
!ERROR: MALresolve:Admin.main[8]:type mismatch flt := str
function Admin.main():int;	#0:(main:int)
	s := "hello";	#1:(s:str)<-($2:str)
	i := 1;	#2:(i:sht)<-($4:sht)
	b := true;	#3:(b:bit)<-($6:bit)
	z := mal.new(int,int);	#4:(z:bat[int,int])<-(int:int)(int:int)
	j := 1;	#5 unknown:(j:sht)<-($10:lng)
	k := 1;	#6 unknown:(k:lng)<-($4:sht)
	y := new(int,int);	#7 unknown:(y:bat[str,int])<-(int:int)(int:int)
	f := "wrong";	#8 unknown:(f:flt)<-($14:str)
end function;	#9:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>